<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    tools:context=".CreateAccount">

    <TextView
        android:id="@+id/labelNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/User"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="190dp"
        android:layout_height="0dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/labelNombre"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Password"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelNombre" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="@+id/labelPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/labelMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Mail"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtMail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPassword" />

    <TextView
        android:id="@+id/labelPhone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Phone"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/txtPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelMail" />

    <TextView
        android:id="@+id/labelGenre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Genre"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/rGroupGenre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPhone" />

    <EditText
        android:id="@+id/txtMail"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/labelMail"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/txtPhone"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintBottom_toBottomOf="@+id/labelPhone"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/rGroupGenre"
        android:layout_width="190"
        android:layout_height="97dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/labelGenre">

        <RadioButton
            android:id="@+id/rbtnGenreFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GenreFemale"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbtnGenreMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GenreMale"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbtnGenreOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GenreOther"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/labelDateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/DateOfBith"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rGroupGenre" />

    <EditText
        android:id="@+id/txtDateOfBith"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDateOfBirth" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/CreateAccount"
        android:textColor="@color/colorPrimaryBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDateOfBith" />

</androidx.constraintlayout.widget.ConstraintLayout>