<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLoginGoogle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@color/Google"
        android:text="@string/Google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginFB" />

    <Button
        android:id="@+id/btnLoginFB"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@color/FB"
        android:text="@string/FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginAccount" />

    <Button
        android:id="@+id/btnLoginAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@color/colorPrimaryLight"
        android:text="@string/Login"
        android:textColor="@color/colorPrimaryBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <Button
        android:id="@+id/btnCreateAcount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:background="@color/colorPrimary"
        android:onClick="goToCreateAccount"
        android:text="@string/CreateAccount"
        android:textColor="@color/colorPrimaryBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginGoogle" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20999998"
        tools:srcCompat="@tools:sample/avatars[3]" />

</androidx.constraintlayout.widget.ConstraintLayout>